force-app/main/default/objects/Housing_Member__c/Housing_Member__c.object-meta.xml
<CustomObject>
    <label>Housing Member</label>
    <nameField>
        <label>Housing Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Housing Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>