force-app/main/default/objects/Housing_Member__c/fields/Adult_or_Minor__c.field-meta.xml
<CustomField>
    <fullName>Adult_or_Minor__c</fullName>
    <label>Adult or Minor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Adult_Or_Minor</valueSetName>
    </valueSet>
</CustomField>