force-app/main/default/objects/Housing_Member__c/fields/Adult_Status__c.field-meta.xml
<CustomField>
    <fullName>Adult_Status__c</fullName>
    <formula>IF
( 
    ISBLANK(Birthday__c),
    TEXT(Adult_or_Minor__c),

    IF
    (
        Age__c &gt;= 18,
        &quot;Adult&quot;,
        &quot;Minor&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adult Status</label>
    <type>Text</type>
</CustomField>