force-app/main/default/objects/Housing_Member__c/fields/Bad_Credit__c.field-meta.xml
<CustomField>
    <fullName>Bad_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bad Credit</label>
    <type>Checkbox</type>
</CustomField>