force-app/main/default/objects/Housing_Member__c/fields/Criminal_History__c.field-meta.xml
<CustomField>
    <fullName>Criminal_History__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Criminal History</label>
    <type>Checkbox</type>
</CustomField>