force-app/main/default/objects/Housing_Member__c/fields/Full_Time_Student__c.field-meta.xml
<CustomField>
    <fullName>Full_Time_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Full Time Student</label>
    <type>Checkbox</type>
</CustomField>