force-app/main/default/objects/Housing_Member__c/fields/Head_Of_Household__c.field-meta.xml
<CustomField>
    <fullName>Head_Of_Household__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Head of Household</label>
    <type>Checkbox</type>
</CustomField>