force-app/main/default/objects/Housing_Member__c/fields/Housing_Member_Ownership_Status__c.field-meta.xml
<CustomField>
    <fullName>Housing_Member_Ownership_Status__c</fullName>
    <formula>IF( 
   Housing_Member_Belongs_to_Contact_Owner__c,
  &quot;Self&quot;,
  Null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Housing Member Ownership Status</label>
    <type>Text</type>
</CustomField>