force-app/main/default/objects/Housing_Member__c/fields/Limited_Mobility__c.field-meta.xml
<CustomField>
    <fullName>Limited_Mobility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Limited Mobility</label>
    <type>Checkbox</type>
</CustomField>