force-app/main/default/objects/Housing_Member__c/fields/Pet_Non_Service_Animal__c.field-meta.xml
<CustomField>
    <fullName>Pet_Non_Service_Animal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pet (Non Service Animal)</label>
    <type>Checkbox</type>
</CustomField>