force-app/main/default/objects/Housing_Member__c/fields/Prior_Eviction__c.field-meta.xml
<CustomField>
    <fullName>Prior_Eviction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prior Eviction</label>
    <type>Checkbox</type>
</CustomField>