force-app/main/default/objects/Housing_Member__c/fields/Relation_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Relation_to_Client__c</fullName>
    <label>Relation to Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Family_Relation_to_Client</valueSetName>
    </valueSet>
</CustomField>