force-app/main/default/objects/Housing_Member__c/fields/Service_Animal__c.field-meta.xml
<CustomField>
    <fullName>Service_Animal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Animal</label>
    <type>Checkbox</type>
</CustomField>